--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="container">
     <h2>Contact Us</h2>
     <form
-      action="https://formsubmit.co/receptionist@becksteadlaw.com"
+      action="https://formsubmit.co/johnbeckstead@gmail.com"
       method="POST"
       class="contact-form"
     >
@@ -196,3 +196,5 @@
   <script src="index.js"></script>
 </body>
 </html>
+
+
