--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <input type="hidden" name="_subject" value="📨 New message from Beckstead Law website">
 
       <!-- BCC secondary email -->
-      <input type="hidden" name="_bcc" value="shaw@becksteadlaw.com,john@becksteadlaw.com">
+      <input type="hidden" name="_cc" value="shaw@becksteadlaw.com,john@becksteadlaw.com">
 
       <!-- auto-reply to visitor -->
       <input
@@ -205,4 +205,5 @@
   <script src="index.js"></script>
 </body>
 </html>
+
 
